--- a/Slides.qmd
+++ b/Slides.qmd
@@ -1,9 +1,15 @@
 ---
 title: "Cox Proportional Hazards Model"
-output: html_document
 author: "Halley Deleeuw and Jasmine Sawh"
-date: '`r Sys.Date()`'
-format: revealjs
+date: "November 30, 2023"
+format: 
+  revealjs:
+    theme: serif
+    transition: slide
+    smaller: true
+    code-fold: true
+    scrollable: true
+    embed-resources: true
 course: STA 6257 - Advanced Statistical Modeling
 bibliography: references.bib # file contains bibtex for references
 #always_allow_html: true # this allows to get PDF with HTML features
@@ -15,450 +21,164 @@ editor:
   markdown: 
     wrap: 72
 ---
-## Literature Review 
 
-#### Introduction to Cox Proportional Hazards Model 
+### Introduction to Cox Proportional Hazards Model
 
-The Cox Proportional Hazard model is a powerful took for survival analysis. In this section, I will review several key articles that shed light on its applications and implications. Two insightful articles provide a foundation understanding of the Cox Proportional Hazard model.The first paper by Abeysekera [@Abeysekera2009] was helpful when understanding the baseline of Cox Proportional Hazard model. It uses the model to check if the Proportional Hazards Assumptions are true. In order to test this they used the the global goodness-of-fit test proposed by Schoenfeld. The authors used an example from a clinical study involving heroin addicts who were getting methadone treatments. There were three components that were looked at which were the highest meth dose, addicts with a criminal record vs not, and how long they were treated at a clinic. What I really enjoyed about this paper and what I want to make note of is the math and coding behind the method. It explained it really well and included the code on the bottom of the paper. The second link was different but also helpful as well [@Fan2002]. The purpose of this one is to discuss variable selection techniques to the Cox Proportional Hazard model. I wanted to note this one since this can help my partner and I when it comes to approaching a data set and identifying the most important predictors. This paper doesn't go into particular depth of a hazard model like the first one. However, it shows the mathematical reasoning to choose a predictor and the outcome of the model when using their approach. 
+- Developed by Sir David R. Cox in 1972
+- Statistical method for survival analysis and epidemiological research
+- Analyzes time-to-event data
+- Estimates hazard function
+- Explores relationships with independent variables
+- Applications include healthcare, engineering, social sciences 
 
-#### Application of Cox Proportional Hazards Model
+---
 
-The application of the Cox Proportional Hazard model extends to various domains. Ben-Assuli employs it to predict excessive energy consumption in healthcare buildings, studying various influences. 0The goal of paper was to analyze and predict excessive energy consumption in healthcare buildings. The parameters that were studied was building construction, facilities, demographics and climate. The authors took these variables in order to see the what effects it has to energy over-consumption. The importance of the paper is to find ways for spending on energy as well as analyzing the key facts or consumption in healthcare buildings. The study was done on 64 healthcare buildings in Spain and used the Cox Proportional Hazards model to analyze. The model was adapted to predict energy over-consumption which I thought was interesting route to take for the study. The two variables that ended up being significant was demographic and facilities. I would like to note that this was only conducted in Spain’s region so the demographic column might not be a reliable factor. Also, this was a different approach in using Cox Proportional Hazard model. 
+### Methods
 
-In a different context, Gonzalez-Dominguez utilizes shared frailty with the Cox proportional hazards regression to analyze post discharge survival analysis of CHF patients[@Gonzalez-Dominguez2022]. The goal of the paper is is to find the survival probability of patients with congestive heart failure and identify the factors affecting their early mortality within 90 days after hospital discharge. This paper is interesting because it uses survival analysis with Cox proportional hazards model as well as comparing it with a shared frailty correction. After further research not his I found that shared frailty correction is a technique used in survival analysis to account for unobserved or variability among subjects in a study that can effect their risk of an event.Unlike the Cox Proportional Hazards model, it assumes that the hazard ratios for different individuals are constant over time and that each observation is independent. The data set that was used for the study was from the Israeli Sheba Medical Center and used variables such as patients records with demographic, clinical, medical and lab test data for a total of 18 variables. The authors found that shared frailty correction significantly improves the Cox Proportional model especially with dependent observations. This is a model I feel like would be beneficial in our capstone to utilize since it can further improve our model. 
-
-Equeter takes a unique angle by predicting tool lifespan in machining [@Equeter2020]. It focuses on predicting the Mean Up Time of cutting tool insets based on a single cutting parameter: cutting speed. They employed the model for the predication and did so by transforming the data. Although I was confused at the use of the Cox Proportional Hazard model, the authors thought it was a good fit for assessing tool lifespan and has been used in previous machining studies. The first step the author does is generate degradation paths using a gamma process. The gamma process is employed to generate a set of tool lifetimes. Another part that I was surprised in was the author used a logarithmic transformation of cutting speed in order to improve in prediction performance. In addition, the author uses a piece wise stochastic model for flank wear in order to see the effects at the beginning to the end of the tool life. This paper is helpful when looking at appropriate data for using the Cox Proportional Hazard model. I would like to revisit it when my partner and I want to pick a data set as it sets out important notes to consider such as data transformation, logarithmic transformation and size of the data.
-
-#### Approaches and Presuppositions
-
-Understanding the methods and assumptions behind the Cox Proportional Hazard model is essential for its effective application. Faruk delves into the model's methodology [@Faruk2018]. The researchers used data from the 2012 Indonesian Demographic and Health Survey for the first birth interval. They compared the performance of the model to the three accelerated failure time models by Weibull, exponential and log-normal distributions. The data was assessed for violations of the assumption through log cumulative hazard plots and statistical tests. In the paper, one shortfall that I feel wasn't addressed was the results of the analysis of the data. It was discussed how they employed the log cumulative hazard plots and Goodness-Of-Fit test. The analysis identified significant covariates, including women's education level, husband's education level, contraceptive knowledge, access to mass media, wealth index, and employment status.
-
-Deo applies the Cox Proportional Hazard model to study post-surgical patients with stage 3 lung cancer [@Deo2021]. The authors calculated the survival estimates using the Kaplan-Meier estimates, which I discuss and reference in a different article. They used log-rank test to compare the survival rates between the two groups (males and females). They discuss the advantages and disadvantages of using log-rank test. Then they discuss the assumptions of the CPH test and how it is advantageous for clinical research. They observed that patients that are the same age, females have a 41% reduced risk of mortality and a 1 unit increase in age increases the risk of mortality by 1%.
-
-Fox uses Cox Proportional Hazard in a different light. The researchers used the Rossi data set in the carData package in R[@Fox2023]. The data explores recidivism rates among males in a prison. They created a Cox regression time of re-arrest. They went into detail about how to read the output of the different coefficients. Then, they showed a graph of the estimated survival prediction. There is a specific package in r called Survival, which is useful for this type of analysis.
-
-Similarly, Bland goes into depth on what the log-rank test is [@Bland2004]. It is used to compare the survival rates between two groups. The log-rank test gives a comparison at some arbitrary point in the point, instead of comparing the whole survival time to one another. The log-rank test is also based on the same assumptions as the Kaplan test. The log-rank test is also more likely to detect a different in the groups when the risk for the outcome of interest is higher in one of the groups. 
-
-The goal of this study is to see whether hazard ration, relative risk, and other estimates made by the Cox Proportional Hazards model are biased when the basic assumptions of the model are violated[@Abeysekera2009]. This is very important because whenever regression models are run, not just Cox Proportional Hazards models, many times we take for granted that the assumptions of the model are met. This can lead to incorrect conclusions and predictions. The Cox model assumes that the hazard ratios remain constant over time. If this is violated, then the model may falsely suggest that a variable is significant or vice versa. This study showed an example where the hazards ratio is not constant over time. An example was with the age of smokers and the RR as age increased. As there was an increase in cumulative smoking exposure, the RR decrease after 50. It was also addressed how in the Cox PH model, there is increased emphasis on the Relative Risk. This is convenient because it doesn't require estimating background information. They first examined survival curves by smoking status and then compared a simulated data set could define mortality to a real data set. They found that single minded focus on PH models have hindered the development of other models in epidemiological data. Sometimes hazard functions, rather than the rate of hazard functions may be a better alternative. 
-
-Lastly, Kuitunen and his team highlighted the reporting and adequacy of model details in total join arthroplasty studies[@Kuitunen2021]. It investigates, in detail, the reporting of the model details as well as the model assumptions with total joint arthroplasty studies. Nearly 80% of the Cox proportional hazards were reported inadequately. However, it is still among the most used models. One of the solutions was to hire statisticians to review the process and make sure reproducible results are created. 
-
-Another application of the model was when it was testing the strength of proportional hazards in total joint arthroplasty studies[@Ponkilainene2021]. They found a total of 1154 studies by searching for "cox" AND "hazard" in the abstract. The abstract also had to meet the following criteria: the topic must be on knee or hip joint arthroplasty, survival analysis was used, and a hazard ratio was reported. If those criteria were met, the entire article was read. Nearly 80% of the published TJA survival studies reported proportional hazard assumptions of the Cox regression model 
-inadequately. Also, more than one-fifth of the studies were found to include a probable non-proportional Cox model.
-
-The model can also be used to study the relationship between sleepiness and prediction of a driver's impairment[@Vadeby2010]. The approach was to only use the parametric part of the hazard function to study changes in risk of a critical event (lane change) due to changes in the explanatory variables (indicators). The probability of a critical event is proportional to the hazard function and therefore the changes in risk can be estimated by changes in the hazard function. All co-variates were statistically significant.
-
-In this literature review, we have explored the foundational concepts of the Cox Proportional Hazard model, its diverse applications, and the methods and assumptions underlying its use. These studies collectively showcase the model's significance in diverse fields and the need to critically assess its assumptions and reporting for reliable results. 
-
-## Introduction
-
-Cox Proportional Hazard model is a statistical method that has been used for survival analysis and epidemiological research. The model emerged in 1972 by Sir David R. Cox. The model provides researchers with a robust framework for understanding time-to-event data. It uses a semi-parametric estimator that focuses on estimating the hazard function which represents the instantaneous risk of an event occurring at a given time. The purpose of Cox Proportional Hazards regression is to find the relationship between one or more independent variables and the hazard function while allowing for the exploration in non-linearity and time-varying effects[@Abeysekera2009]. 
-
-The fundamental principles of the Cox Proportional Hazard model and its applications range across various research domains. The model primarily focuses on estimating the hazard function, which represents the instantaneous risk of an event occurring at any given time. The dependent variable in a hazard model consist of two parts, the first part is the event indicator and the second part is a measure of time [@Ponkilainene2021]. The model provides invaluable insights across diverse fields such as healthcare, engineering, social sciences, and beyond. It unravels the relationship between covariates and the hazard rate which represents the instantaneous risk of an event occurring at a given time. 
-
-By analyzing how the various predictors influence the hazard rate over time, researchers can gain a deeper understanding of the factors that impact outcomes such as patient survival, equipment failure or the likelihood of an individual re-offering. There are studies using the model to gain more insight on heroin addicts and if they were getting methadone treatments[@Abeysekera2009]. There are even some studies that found the predictive analysis of the energy consumption of healthcare buildings and predict the excessive energy[@Ben-Assuli2023]. The Cox Proportional Hazard model can even be used in predicting the Mean Up Time of cutting tools inserts based on a single cutting parameter, cutting speed[@Equeter2020]. By being able to  study and analyze this, the Cox Proportional Hazard model has become a vital tool for addressing a wide range of research questions. The key strength when it comes to working with Cox Proportional Hazard model is that it is able to handle censor data. Since most studies utilize real-world scenarios such as in a biomedical study conducted [@Ben-Assuli2023] where study the post discharge survival analysis of CHF patients, not all studies completed their observations by the end of the study. For example in the CHF patients, the authors also utilized shared frailty correction technique in order to account for unobserved or variability amount subjects in the study that can effect their likelihood of an event. The Cox Proportional Hazard model also extends its utility to medical research. Another article examines its use in post-discharge survival analysis of congestive heart failure patients, employing not only the Cox Proportional model but also shared frailty correction[@Gonzalez-Dominguez2022].A technique to account for unobserved or variable factors that can influence an individual's risk of an event. This demonstrates the adaptability of the model to address complex medical scenarios. 
-
-Although the diversity with the Cox Proportional Hazard model is myriad, it still has its limitations. Not every data set is fit for the model and can present more issues when using the model to conduct research. In the context of this paper, we delve into a cancer data set sourced from the National Cancer Institute's Surveillance, Epidemiology, and End Results (SEER) Program. Our objective is to scrutinize variables such as site record, sex, age record, cause of death to site record, death classification, and ethnicity, seeking to unveil the factors that influence the time until death. As our analysis unfolds, we aim to shed light on the intricate relationships within the data set and explore the broader implications of our findings.
-
-In the subsequent sections, we will delve deeper into the intricacies of the data set and the methodology employed in our analysis, further illuminating the applications and implications of the Cox Proportional Hazard model in the context of our research.
-
-(SMALL)
-
-## Methods
-
-The Cox Proportional Hazard Model is a widely used semiparametric survival analysis method that provides a flexible framework for modeling the hazard rate in the presence of right-censored data. Right-censored data is a type of data where the event of interest like death or failure has not occurred for some of the subjects int he study by the end of observation period. Thus, the exact event time is unknown or not observed for these subjects. In this model, the hazard rate at any time point is expressed as the product of a baseline hazard function, denoted as λ0(t) and an exponential function of a linear combination of covariates. 
-
-Mathematically, the Cox model can be defined as: 
-
+- Semiparametric survival analysis method
+- Right-censored data 
 $$
-λ(t) = λ0(t) * exp(β₁X₁ + β₂X₂ + ... + βₖXₖ)
-$$ 
-This is where: 
-$λ(t)$ represents the hazard rate at time t.
-$λ0(t)$ is the baseline hazard function, representing the hazard in the absence of covariates.
-$β₁, β₂, ..., βₖ$ are coefficients associated with covariates$X₁, X₂, ..., Xₖ,$ respectively.
+λ(t) = λ0(t) * exp(β₁X₁ + β₂X₂ + ... + βₖ)
+$$
+---
 
-#### Assumptions 
+### Assumptions/Limitations
 
-Proportional Hazards Assumption -  This assumption of the Cox model states that the effect of covariates on the hazard rate remains constant and is not time-dependent. The hazard ratio between two individuals should stay consistent over time if one individual's covariate values are a constant factor of the other's.
+- Proportional Hazard Assumption
+- Linearity of Continuous Variables
+- Independence of Censoring
+- Sensitivity to Outliers
 
-Independence of Censoring - The model assumes that the censoring process (the event of not observing the outcome) is independent of the event of interest. Hence, censoring process is not related to the underlying risk of the event. 
-
-Linearity of Continuous Variables - The model assumes that the log-hazard is a linear function of the covariates for continuous variables. A unit change in the covariate leads to a constant multiplicative change in the hazard rate. 
-
-## Analysis and Results
+---
 
 ### Data Description
 
-The data we are using in this study is provided by the National Cancer Institute Surveillance, Epidemiology, and End Results Program also known as SEER. It is a comprehensive cancer surveillance system in the United States. SEER collects and reports data related to cancer incidence, prevalence, survival and mortality. It covers a wide range of demographic, clinical, and tumor-related information for cancer research, prevention, and patience care, making it a valuable resource for understanding cancer trends, outcomes, and risk factors at a national level. This data set will be used as the foundation data set for my Cox Proportional Hazard models. 
+- National Cancer Institute Surveillance, Epidemiology, and End Results Program (SEER)
+- Comprehensive cancer surveillance system in the US
+- Covers a wide range of demographic information 
+- Provides insights into cancer trends, outcomes, and risk factors at a national level 
 
-```{r, warning=FALSE, echo=T, message=FALSE}
-# loading packages 
-library(tidyverse)
-library(knitr)
-library(kableExtra)
-library(ggthemes)
-library(ggrepel)
-library(dslabs)
-library(survival)
-library(dplyr)
-library(survival)
-library(gtsummary)
-library(gt)
-library(htmlTable)
-library(IRdisplay)
-library(kableExtra)
-library(ggplot2)
-library(gridExtra)
-library(scales)
-library(ggplot2)
-```
+---
 
-```{r, warning=FALSE, echo=TRUE}
-Seer_updated<- read.csv("Seer_updated.csv")
+### Data Table
+<iframe src="styled_table.html" width="100%" height="500" html lang="en" charset="UTF-8"></iframe>
 
-df <- Seer_updated %>%
-  rename(
-    Age = Age.recode.with.single.ages.and.85.,
-    Race = Race.ethnicity,
-    Sex = Sex,
-    Origin = Origin.recode.NHIA..Hispanic..Non.Hisp.,
-    Year.of.diagnosis = Year.of.diagnosis,
-    Survival.months = Survival.months,
-    COD_Site =COD.to.site.recode,
-    Primary.Site = Primary.Site,
-    Median_Household_Income = Median.household.income.inflation.adj.to.2019
-  ) %>%
-  mutate(survived = ifelse(COD_Site == "Alive", 0, 1))
+---
 
-  df$Age <- sub(" years", "", df$Age)
-  df$Age <- as.numeric(df$Age)
-  df$Survival.months <- as.numeric(df$Survival.months)
-  df$Race_Category <- case_when(
-  df$Race %in% c("White") ~ "White",
-  df$Race %in% c("Black") ~ "Black",
-  df$Race %in% c("Asian Indian", "Asian Indian or Pakistani", "Chinese", "Japanese", "Korean", "Thai", "Vietnamese", "Other Asian") ~ "Asian",
-  df$Race %in% c("Chamorran", "Fiji Islander", "Guamanian", "Hawaiian", "Micronesian", "Samoan", "Tahitian", "Tongan", "Pacific Islander") ~ "Pacific      Islander",
-  TRUE ~ "Other/Miscellaneous"
-)
-df <- df %>%
-  mutate(
-    Cancer_Group = case_when(
-      df$COD_Site %in% c("Colon excluding Rectum", "Rectum and Rectosigmoid Junction") ~ "Colorectal",
-      df$COD_Site %in% c("Lung and Bronchus") ~ "Lung Cancer",
-      df$COD_Site %in% c("Pancreas") ~ "Pancreatic Cancer",
-      df$COD_Site %in% c("Breast") ~ "Breast Cancer",
-      df$COD_Site %in% c("Prostate") ~ "Prostate Cancer",
-      TRUE ~ "Other"
-    )
-  )
-styled_table <- df %>%
-  select(
-    Age,
-    Race_Category,
-    Sex,
-    survived,
-    Origin,
-    Year.of.diagnosis,
-    Survival.months,  # Modified to use the numeric "Survival.months"
-    Cancer_Group,
-    Median_Household_Income
-  ) %>%
-  tbl_summary(
-    type = list(
-      Age ~ 'continuous2',
-      Race_Category ~ 'categorical',
-      Sex ~ 'categorical',
-      Origin ~ 'categorical',
-      Year.of.diagnosis ~ 'continuous2',
-      Survival.months ~ 'continuous2',  # Using "Survival.months" as a continuous variable
-      Cancer_Group ~ 'categorical',
-      Median_Household_Income ~ 'categorical'
-    ),
-    label = list(
-      Age ~ "Patient Age",
-      Race_Category ~ "Patient Race",
-      Sex ~ "Patient Gender",
-      Origin ~ "Patient's Origin",
-      Year.of.diagnosis ~ "Year of Diagnosis",
-      Survival.months ~ "# of months after diagnosis",
-      Cancer_Group ~ "Cause of Death Type",
-      Median_Household_Income ~ "Median Household Income"
-    ),
-    statistic = all_continuous() ~ c("{median} ({p25}, {p75})", "{min}, {max}"),
-    by = survived
-  ) %>%
- add_overall(last = TRUE) %>%
-  bold_labels() %>%
-  italicize_levels()
-# Export the styled table to an HTML file
-html_table <- styled_table %>%
-  as_gt() %>%
-  gt::as_raw_html()
-# Save the HTML table to a file
-writeLines(html_table, "styled_table.html")
+#Data Visualizations
 
-styled_table %>%
-  as_gt() %>%
-  gt::as_raw_html()
+::: panel-tabset
 
-styled_table %>%
-  kable() %>%
-  kable_styling(full_width = FALSE)
-```
+### Patient Age
 
-### Data Visualization
+![](Images/density.jpg)
 
-This portion of the paper will provide an understanding of the variables that contribute to survival. The graphs below serve as a preliminary exploration of key demographic elements within our study cohort, encompassing variables such as gender, race, geographic origin, and temporal dynamics indicated by the year of diagnosis.In addition to demographic profiling, we include visual observation of the diversity of cancer types prevalent in the data set. 
+### Patients Race
 
+![](Images/race.png)
 
-Below is the distribution of patient age using a histogram and density plot. We find that majority of the patients are between the ages of 60-70.
+### Patients Gender
 
-```{r, warning=FALSE, echo=TRUE}
-histogram_plot <- ggplot(df, aes(x = Age)) +
-  geom_histogram(binwidth = 5, fill = "purple", color = "black") +
-  labs(title = "Distribution of Patient Age",
-       x = "Age",
-       y = "Frequency") +
-  theme_minimal()
+![](Images/Gender.jpg)
 
+### Patients Origin 
 
-density_plot <- ggplot(df, aes(x = Age)) +
-  geom_density(fill = "purple", color = "black") +
-  labs(title = "Density Plot of Patient Age",
-       x = "Age",
-       y = "Density") +
-  theme_minimal()
+![](Images/origin.jpg)
 
-grid.arrange(histogram_plot, density_plot, ncol = 2)
-```
+### Year of Diagnosis 
 
-Below is a bar chart for race category. The distribution of race categories reveals a significant imbalance, with the number of individuals in the White category are approximately four times greater than in any other race category. This highlights the necessity for data preprocessing techniques to ensure robust model performance. 
+![](Images/diagnosis.jpg)
 
-```{r, warning=FALSE, echo=TRUE}
-bar_plot <- ggplot(df, aes(x = Race_Category)) +
-  geom_bar(fill = "purple") +
-  labs(title = "Distribution of Race Category",
-       x = "Race Category",
-       y = "Count") +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  scale_y_continuous(labels = comma)
+### Survival
 
-bar_plot
-```
+![](Images/survival.jpg)
 
-Below is the distribution of patient gender. We notice that about 60% of the patients are females and the rest are males. 
+### Cancers
 
-```{r, warning=FALSE, echo=TRUE}
-pie_chart <- ggplot(df, aes(x = "", fill = Sex)) +
-  geom_bar(width = 1) +
-  coord_polar(theta = "y") +
-  labs(title = "Distribution of Patient Gender",
-       fill = "Gender") +
-  theme_minimal() +
-  scale_y_continuous(labels = comma)
+![](Images/cancer.jpg)
 
-pie_chart
-```
+### Alive Patients
 
-Below is the distribution of the patient origin. It is split into two categories. Non-Spanish-Hispanic-Latino and Spanish-Hispanic-Latino. 
+![](Images/alive.jpg)
 
-```{r, warning=FALSE, echo=TRUE}
-bar_plot <- ggplot(df, aes(x = Origin)) +
-  geom_bar(fill = "purple") +
-  labs(title = "Distribution of Patient Origin",
-       x = "Origin",
-       y = "Count") +
-  scale_y_continuous(labels = comma) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+### Deceased Patients
 
-bar_plot
-```
+![](Images/dead.jpg)
 
-Below is the distribution of year of diagnosis. The year of diagnosis ranges from 2016 through 2019. It shows that as the years increase, there are more diagnoses made by approximately 5000 every year.
+### Median Income
 
-```{r, warning=FALSE, echo=TRUE}
-histogram_plot <- ggplot(df, aes(x = Year.of.diagnosis)) +
-  geom_histogram(binwidth = 1, fill = "purple", color = "black") +
-  labs(title = "Distribution of Year of Diagnosis",
-       x = "Year of Diagnosis",
-       y = "Count") +
-  theme_minimal()
+![](Images/income.jpg)
 
-histogram_plot
-```
+:::
 
-Below is the distribution of survival months. We observe that after diagnosis, there are an ample amount of deaths within the first month. The following months follow a trend towards an exponential decay.
+---
 
+### Objective and Purpose
 
-```{r, warning=FALSE, echo=TRUE}
-histogram_plot <- ggplot(df, aes(x = Survival.months)) +
-  geom_histogram(binwidth = 1, fill = "purple", color = "black") +
-  labs(title = "Distribution of Survival Months",
-       x = "Survival Months",
-       y = "Count") +
-  theme_minimal()
+- Explore factors impacting patient survival
+- Analyze key variables such as cancer type, race, gender, age
+- Understanding their significance in predicting survival 
+- Assess hazard ratios for each variable 
+- Center analysis on relationships and impact on survival outcomes
 
-histogram_plot
-```
-Below is the distribution of the type of cancers in the data set. When analyzing the data, we notice that there is a m=higher count of others compared to breast cancer, colorectal, lung cancer, pancreatic cancer and prostate cancer. 
+---
 
-```{r, warning=FALSE, echo=TRUE}
-bar_plot <- ggplot(df, aes(x = Cancer_Group)) +
-  geom_bar(fill = "purple") +
-  labs(title = "Distribution of the Type of Cancers",
-       x = "Cancer Group",
-       y = "Count") +
-  scale_y_continuous(labels = comma) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+### Statistical Modeling for Data
 
-bar_plot
-```
-Below is a distribution of those who were diagnosed and are still alive. We can see that many with breast cancer are still alive, as well as kidney and thyroid cancer. 
+::: panel-tabset
 
-```{r, warning=FALSE, echo=TRUE}
+### Results
 
-alive_data <- df[df$survived == 0, ]
-alive_data2 <- alive_data %>%
-  rename(Cancer_type = Site.recode.ICD.O.3.WHO.2008)
-bar_plot2 <- ggplot(alive_data2, aes(x = Cancer_type)) +
-  geom_bar(fill = "purple") +
-  labs(title = "Distribution of the Type of Cancers for Alive Patients",
-       x = "Cancer Group",
-       y = "Count") +
-  scale_y_continuous(labels = comma) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+![](Images/hazardmodel.jpg)
 
-bar_plot2
+### Residuals
+![](Images/residuals.png)
 
-```
-Below is a distribution of those who were diagnosed and are now deceased. Based on the bar graph, pancreatic cancer is the most susceptible to mortality, followed by liver cancer and breast cancer. 
+### QQPlot 
+![](Images/QQplot.jpg)
 
-```{r, warning=FALSE, echo=TRUE}
+### SR Cancer
+![](Images/residual1.jpg)
 
-dead_data <- df[df$survived == 1, ]
-dead_data2 <- dead_data %>%
-  rename(Cancer_type = Site.recode.ICD.O.3.WHO.2008)
-bar_plot3 <- ggplot(dead_data2, aes(x = Cancer_type)) +
-  geom_bar(fill = "purple") +
-  labs(title = "Distribution of the Type of Cancers for Deceased Patients",
-       x = "Cancer Group",
-       y = "Count") +
-  scale_y_continuous(labels = comma) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+### SR Race
+![](Images/resiudal2.jpg)
 
-bar_plot3
+### SR Gender
+![](Images/residual3.jpg)
 
-```
+### SR Age
+![](Images/residual4.jpg)
 
-Below is the median household income for patients. Majority of the patients have an income that is above 75,000. 
-```{r, warning=FALSE, echo=TRUE}
-ggplot(df, aes(x = Median_Household_Income, fill=Median_Household_Income)) +
-  geom_bar(color="white") +  
-  theme_minimal(base_family="ITC Officina Sans") +
-  scale_fill_economist(labels=NULL) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust=1))
-```
+:::
 
-## Statistical Modeling
+### Stratified Analysis 
 
-In the below, we will use Cox Proportional Model to perform survival analysis. Coxph is a function from the survival package in R. Our primary objective is to examine the determinants influencing survival outcomes within a diverse data set of patients. Utilizing the Cox Proportional Hazard model, we explore the impact of key variables such as cancer type, race, gender, age, etc on the likelihood of survival. Our analysis centered on exploring these variables and their associated hazard ratios to better understand their significance in predicting survival. 
+::: panel-tabset
 
-We create a model with survival as our response variable and cancer group, race category, sex, and age as our predictive variable. The table below shows the results of our model. 
-```{r, warning=FALSE, echo=TRUE}
-cox_model <- coxph(Surv(Survival.months, survived) ~ Cancer_Group + Race_Category + Sex + Age, data = df)
-cox_summary <- summary(cox_model)
-table_data <- cox_summary$coefficients[, c("coef", "exp(coef)", "Pr(>|z|)")]
-kable(table_data, 
-      caption = "Cox Proportional Hazard Model Results",
-      format = "html", 
-      align = "c", 
-      col.names = c("Coefficient", "Hazard Ratio", "p-value")) %>%
-  kable_styling(bootstrap_options = "striped", full_width = FALSE)
+### Results
 
-```
+![](Images/hazardmodel.jpg)
 
-The model's coefficient estimates and hazard ratios demonstrate the magnitude and direction of the influence of each covariate on survival. When we look at the Cancer group, the Cox model indicated that the type of cancer a person  had was critical determinate of survival. Based on our results, colorectal and lung cancer were associated with hazard ratios close to .69. When examining the race category there was also substantial effect on survival. For the category under Black and Pacific Islander, the hazard ratios were approximately 1.36 and 1.19, respectively. This indicates an elevated risk of experiencing the event. For the sex category, we found that males face a 2.33 times higher risk of experiencing the event compared to females. For age, there was a 1.03 hazard ration, implying that there was a 3% increase in the hazard for each one-year increment in age. In the above mode, we found the factors that affect survival in the data set. 
+### Residuals
+![](Images/residuals.png)
 
-```{r, warning=FALSE, echo=TRUE}
-cox_residuals <- residuals(cox_model, type = "martingale")
-summary(cox_residuals)
-cox.zph_result <- cox.zph(cox_model)
-cox.zph_result
-```
+### QQPlot 
+![](Images/QQplot.jpg)
 
+### SR Cancer
+![](Images/residual1.jpg)
 
+### SR Race
+![](Images/resiudal2.jpg)
 
-In the model below, we took our data and filtered on deceased patients. Similar to above, we used deceased as the response variable and cancer group and gender as our predictive variable. The table below shows the results of our model. 
-```{r, warning=FALSE, echo=TRUE}
-filtered_data <- df %>%
-  filter(survived == 1) # we only want those that didn't survive 
- filtered_data$status <- 1
- filtered_data$Cancer_Group <- as.factor(filtered_data$Cancer_Group)
-filtered_data$Gender <- ifelse(filtered_data$Sex == "Female", 0, 1)
+### SR Gender
+![](Images/residual3.jpg)
 
-cox_model2 <- coxph(Surv(Survival.months) ~  Gender + Cancer_Group, data = filtered_data)
-cox_summary2 <- summary(cox_model2)
-table_data2 <- cox_summary2$coefficients[, c("coef", "exp(coef)", "Pr(>|z|)")]
-kable(table_data2, 
-      caption = "Cox Proportional Hazard Model Results on Deceased Patients",
-      format = "html", # Use "html" format for better appearance
-      align = "c", # Center-align the columns
-      col.names = c("Coefficient", "Hazard Ratio", "p-value")) %>%
-  kable_styling(bootstrap_options = "striped", full_width = FALSE)
-```
-
-The code above focuses on performing Cox Proportional Hazard model on individuals who did not survive. This allows for more targeted examination of factors and investigate the impact of gender, and cancer type on their survival. The hazard ratio, which is the (exp(coef)) for gender is 1.106. This means that males (coded as 1) have a 1.106 times higher risk of experiencing the event, in this case death, compare to females (coded as 0). The p-value ("< 2e-16") for Gender is very low, indicating that the hazard ratio is statistically significant. This means that "Gender" (with females as the reference) is associated with a significant difference in survival, and that difference favors females. In the Cancer_group category, Pancreatic Cancer has the highest hazard ratio among the cancer groups with approximately 1.919 . This represents an increase in the risk of the event at 91.9% increase. Thus, individuals with pancreatic cancer are at a significantly higher risk of non-survival. In addition, all Cancer_groups except for Prostate Cancer has a statistically significant impact on survival, which is seen in the p-value ("<2e16"). This implies that the differences in survival associated with these cancer types are unlikely to have occurred by chance. 
-```{r, warning=FALSE, echo=TRUE}
-cox_residuals2 <- residuals(cox_model2, type = "martingale")
-summary(cox_residuals2)
-cox.zph_result2 <- cox.zph(cox_model2)
-cox.zph_result2
-```
+### SR Age
+![](Images/residual4.jpg)
 
 
 
 
-Using the original data set similar to our first model, we set white as the reference category and made female into a binary variable. We made white a reference category to compare the hazard ratios of other categories to it. So, a hazard ratio of 1 for another race category indicates the risk is the same, if it is less than 1 it suggests a lower risk of survival and greater than 1 is a higher risk of survival. 
-```{r, warning=FALSE, echo=TRUE}
-## not filtering on death only to see what is associated with higher risk of death compared to those that didn't die
-df$Gender <- ifelse(df$Sex == "Female", 0, 1)
-# Assuming you want "White" to be the reference category
-df$Race_Category <- as.factor(df$Race_Category)
 
-# Set "White" as the reference category
-df$Race_Category <- relevel(df$Race_Category, ref = "White")
-
-
-cox_model3 <- coxph(Surv(Survival.months, survived) ~ Age + Gender + Race_Category, data = df)
-cox_summary3 <- summary(cox_model3)
-table_data3 <- cox_summary3$coefficients[, c("coef", "exp(coef)", "Pr(>|z|)")]
-kable(table_data3, 
-      caption = "Cox Proportional Hazard Model Results (Full Data)",
-      format = "html", # Use "html" format for better appearance
-      align = "c", # Center-align the columns
-      col.names = c("Coefficient", "Hazard Ratio", "p-value")) %>%
-  kable_styling(bootstrap_options = "striped", full_width = FALSE)
-
-```
-
-The purpose of the code above is to examine the factors associated with a higher risk of survival compared to individuals who did die. We used the Race category white as a reference category as stated above. 
-Race_CategoryAsian has a hazard ratio of 0.8547, meaning that individuals in the Asian category have a 14.53% lower risk of survival compared to individuals in the white category.
-Race_CategoryBlack has a hazard ratio of 1.3478, indicating that individuals in the Black category have a 34.78% higher risk of survival compared to individuals in the white category.
-Race_CategoryOther/Miscellaneous has a hazard ratio of 0.8734, meaning that individuals in this category have a 12.66% lower risk of survival compared to individuals in the white category.
-Race_CategoryPacific Islander has a hazard ratio of 1.0706, indicating that individuals in the Pacific Islander category have a 7.06% higher risk of survival compared to individuals in the white category.
-Notably, Race_CategoryOther/Miscellaneous and Race_CategoryPacific Islander are not statistically significant predictors of the risk of survival as their p-values are greater than 0.05
-
-```{r, warning=FALSE, echo=TRUE}
-cox_residuals3 <- residuals(cox_model3, type = "martingale")
-summary(cox_residuals3)
-cox.zph_result3 <- cox.zph(cox_model3)
-cox.zph_result3
-```
-
-\[ \cite{Abeysekera2009}, \cite{Ben-Assuli2023}, \cite{Equeter2020}, \cite{Fan2002}, \cite{Gonzalez-Dominguez2022}, \cite{Faruk2018}, \cite{Deo2021}, \cite{Fox2023}, \cite{Bland2004}, \cite{Kuitunen2021}, \cite{Ponkilainene2021}, \cite{Vadeby2010} \]
+:::
