--- a/Slides.qmd
+++ b/Slides.qmd
@@ -22,6 +22,18 @@ editor:
     wrap: 72
 ---
 
+### Overview
+
+- Introduction
+- Methods
+- Assumptions/Limitations
+- Data Description & Visualization
+- Objective & Purpose
+- Statistical Modeling
+- Conclusion
+
+---
+
 ### Introduction to Cox Proportional Hazards Model
 
 - Developed by Sir David R. Cox in 1972
